Initialized all the necessary folders, links and scripts.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>
-    </title>
+    w2friday</title>
   </head>
   <body>
     <div class="container">
+      <h1>Know Which Track You Should be On</h1>
+      <p>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</p>
 
+    <form id="userForm">
+      <p>Front-End</p>
+      <input type="text" id="userInput" value="">
+      <button type="submit" name="submit">Submit</button>
+    </form>
+
+
+</div>
     </div>
   </body>
 </html>
