This will add updated README file, started questions, and chosen tracks.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,49 @@
   <body>
     <div class="container">
       <h1>Know Which Track You Should be On</h1>
+
       <p>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</p>
 
-    <form id="userForm">
-      <p>Front-End</p>
-      <input type="text" id="userInput" value="">
-      <button type="submit" name="submit">Submit</button>
-    </form>
+      <form class="quiz" action="index.html" method="post">
 
+        <div id="question1">
+          <p>Do you like designs?</p>
+          <input type="radio" name="Java" value="1"> Input 1</input>
+          <input type="radio" name="Ruby" value="2"> Input 2</input>
+          <input type="radio" name="PHP" value="3"> Input 3</input>
+        </div>
+        <br>
+        <div id="question2">
+          <p>Do you enjoy making sense of things?</p><br>
+          <input type="radio" name="Java" value="1"> Input 1</input>
+          <input type="radio" name="Ruby" value="2"> Input 2</input>
+          <input type="radio" name="PHP" value="3"> Input 3</input>
+        </div>
+        <br>
+        <div id="question3">
+          <p>Do you enjoy interacting with other people?</p><br>
+          <input type="radio" name="Java" value="1"> Input 1</input>
+          <input type="radio" name="Ruby" value="2"> Input 2</input>
+          <input type="radio" name="PHP" value="3"> Input 3</input>
+        </div>
+        <br>
+        <div id="question4">
+          <p>Do you like working alone?</p>
+          <input type="radio" name="Java" value="1"> Input 1</input>
+          <input type="radio" name="Ruby" value="2"> Input 2</input>
+          <input type="radio" name="PHP" value="3"> Input 3</input>
+        </div>
+        <br>
+        <div id="question5">
+          <p>Is aesthetic important to you?</p>
+          <input type="radio" name="Java" value="1"> Input 1</input>
+          <input type="radio" name="Ruby" value="2"> Input 2</input>
+          <input type="radio" name="PHP" value="3"> Input 3</input>
+        </div>
+        <br>
+        <button type="submit">Submit</button>
+      </form>
 
-</div>
     </div>
   </body>
 </html>
