Add dynamic variables to shorten the process and make it easier for me to understand. Use console.logwith the dynamic variable command in order to see if it is doing what it's intending to do.

--- a/index.html
+++ b/index.html
@@ -15,41 +15,46 @@
       <p>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</p>
 
       <form class="quiz" action="index.html" method="post">
+        <p>Do you like designs?</p>
 
-        <div id="question1">
-          <p>Do you like designs?</p>
-          <input type="radio" name="Java" value="1"> Input 1</input>
-          <input type="radio" name="Ruby" value="2"> Input 2</input>
-          <input type="radio" name="PHP" value="3"> Input 3</input>
-        </div>
+        <select id="question1">
+          <option type="radio" name="Java" value="1"> Sorta</option>
+          <option type="radio" name="Ruby" value="2">Yes!</option>
+          <option type="radio" name="PHP" value="3">No</option>
+        </select>
         <br>
-        <div id="question2">
-          <p>Do you enjoy making sense of things?</p><br>
-          <input type="radio" name="Java" value="1"> Input 1</input>
-          <input type="radio" name="Ruby" value="2"> Input 2</input>
-          <input type="radio" name="PHP" value="3"> Input 3</input>
-        </div>
+
+        <p>Do you enjoy making sense of things?</p>
+        <select id="question2">
+          <option type="radio" name="Java" value="1"> Yes!</option>
+          <option type="radio" name="Ruby" value="2"> Sometimes</option>
+          <option type="radio" name="PHP" value="3"> Kill me now</option>
+        </select>
         <br>
-        <div id="question3">
-          <p>Do you enjoy interacting with other people?</p><br>
-          <input type="radio" name="Java" value="1"> Input 1</input>
-          <input type="radio" name="Ruby" value="2"> Input 2</input>
-          <input type="radio" name="PHP" value="3"> Input 3</input>
-        </div>
+
+        <p>Do you enjoy interacting with other people?</p>
+        <select id="question3">
+          <option type="radio" name="Java" value="1">On the Weekend</option>
+          <option type="radio" name="Ruby" value="2">Of course!</option>
+          <option type="radio" name="PHP" value="3">Try to get me too. I dare you.</option>
+        </select>
         <br>
-        <div id="question4">
-          <p>Do you like working alone?</p>
-          <input type="radio" name="Java" value="1"> Input 1</input>
-          <input type="radio" name="Ruby" value="2"> Input 2</input>
-          <input type="radio" name="PHP" value="3"> Input 3</input>
-        </div>
+
+        <p>Do you like working alone?</p>
+        <select id="question4">
+          <option type="radio" name="Java" value="1">Not really</option>
+          <option type="radio" name="Ruby" value="2">Yes</option>
+          <option type="radio" name="PHP" value="3">I hate everyone</option>
+        </select>
         <br>
-        <div id="question5">
-          <p>Is aesthetic important to you?</p>
-          <input type="radio" name="Java" value="1"> Input 1</input>
-          <input type="radio" name="Ruby" value="2"> Input 2</input>
-          <input type="radio" name="PHP" value="3"> Input 3</input>
-        </div>
+
+        <p>Is aesthetic important to you?</p>
+        <select id="question5">
+          <option type="radio" name="Java" value="1">If i get paid</option>
+          <option type="radio" name="Ruby" value="2">A E S T H E T I C C C </option>
+          <option type="radio" name="PHP" value="3">I am the hacker 4chan</option>
+        </select>
+        <br>
         <br>
         <button type="submit">Submit</button>
       </form>
