Add questions and gave variety of answers to choose from. Add different alerts depending on what answers users give.

--- a/index.html
+++ b/index.html
@@ -12,47 +12,87 @@
     <div class="container">
       <h1>Know Which Track You Should be On</h1>
 
-      <p>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</p>
+      <h4>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</h4>
 
       <form class="quiz" action="index.html" method="post">
-        <p>Do you like designs?</p>
+        <h4>Do you like designs?</h4>
 
         <select id="question1">
-          <option type="radio" name="Java" value="1"> Sorta</option>
-          <option type="radio" name="Ruby" value="2">Yes!</option>
-          <option type="radio" name="PHP" value="3">No</option>
+          <option name="Java" value="1"> Sorta</option>
+          <option name="Ruby" value="2">Yes!</option>
+          <option name="PHP" value="3">No</option>
         </select>
         <br>
 
-        <p>Do you enjoy making sense of things?</p>
+        <h4>Do you enjoy making sense of things?</h4>
         <select id="question2">
-          <option type="radio" name="Java" value="1"> Yes!</option>
-          <option type="radio" name="Ruby" value="2"> Sometimes</option>
-          <option type="radio" name="PHP" value="3"> Kill me now</option>
+          <option name="Java" value="1"> Yes!</option>
+          <option name="Ruby" value="2"> Sometimes</option>
+          <option name="PHP" value="3"> Kill me now</option>
         </select>
         <br>
 
-        <p>Do you enjoy interacting with other people?</p>
+        <h4>Do you enjoy interacting with other people?</h4>
         <select id="question3">
-          <option type="radio" name="Java" value="1">On the Weekend</option>
-          <option type="radio" name="Ruby" value="2">Of course!</option>
-          <option type="radio" name="PHP" value="3">Try to get me too. I dare you.</option>
+          <option name="Java" value="1">On the Weekend</option>
+          <option name="Ruby" value="2">Of course!</option>
+          <option name="PHP" value="3">Try to get me too. I dare you.</option>
         </select>
         <br>
 
-        <p>Do you like working alone?</p>
+        <h4>Do you like working alone?</h4>
         <select id="question4">
-          <option type="radio" name="Java" value="1">Not really</option>
-          <option type="radio" name="Ruby" value="2">Yes</option>
-          <option type="radio" name="PHP" value="3">I hate everyone</option>
+          <option name="Java" value="1">Sometimes</option>
+          <option name="Ruby" value="2">Yes</option>
+          <option name="PHP" value="3">I hate everyone</option>
         </select>
         <br>
 
-        <p>Is aesthetic important to you?</p>
+        <h4>Is aesthetic important to you?</h4>
         <select id="question5">
-          <option type="radio" name="Java" value="1">If i get paid</option>
-          <option type="radio" name="Ruby" value="2">A E S T H E T I C C C </option>
-          <option type="radio" name="PHP" value="3">I am the hacker 4chan</option>
+          <option name="Java" value="1">If i get paid</option>
+          <option name="Ruby" value="2">A E S T H E T I C C C </option>
+          <option name="PHP" value="3">I am the hacker 4chan</option>
+        </select>
+        <br>
+
+        <h4>What kind of dessert do you like?</h4>
+        <select id="question6">
+          <option name="Java" value="1">Ice Cream Cake!</option>
+          <option name="Ruby" value="2">Creme Brulee.</option>
+          <option name="PHP" value="3">More broccoli, please.</option>
+        </select>
+        <br>
+
+        <h4>What kind of movies do you like?</h4>
+        <select id="question7">
+          <option name="Java" value="1">Comedy</option>
+          <option name="Ruby" value="2">Action</option>
+          <option name="PHP" value="3">Horror, because screaming like a child in public feels great!</option>
+        </select>
+        <br>
+
+        <h4>What video games do you like?</h4>
+        <select id="question8">
+          <option name="Java" value="1">AnimalCrossing</option>
+          <option name="Ruby" value="2">Sims4</option>
+          <option name="PHP" value="3">Dark Souls MOFO!!!</option>
+        </select>
+        <br>
+
+        <h4>Where is your Travel Destination?</h4>
+        <select id="question9">
+          <option name="Java" value="1">All of Europe!</option>
+          <option name="Ruby" value="2">Most of Asia!</option>
+          <option name="PHP" value="3">North Korea.</option>
+        </select>
+        <br>
+
+        <h4>What's for lunch?</h4>
+        <select id="question10">
+          <option name="Java" value="1">My favorite, French Dip Sandwich!</option>
+          <option name="Ruby" value="2">I'll take sparkling water with my sushi, please.</option>
+          <option name="PHP" value="3">I'll just take the usual, the knuckle sandwich.</option>
         </select>
         <br>
         <br>
