Add images and color in background.Changed size of fonts and worked on styling.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   </head>
   <body>
     <div class="container">
-      <h1>Know Which Track You Should be On</h1>
-
-      <h4>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</h4>
+      <h1>Know Which Track You Should be On</h1><br><br>
+      <p>This is a quiz to help you realize which path of programming you should consider. There are several different kinds of languages in programming, and some of those languages branch out to different other languages as well. All these information can bog us down and even put us in a undecisive trance that we end up not doing anything at all. I know, I've been there. Here, I've narrowed it down to 3 choices. Ruby, Java and PHP.</p>
+      <img src="img/javalogo.png" alt="a logo that is being used by Java">
+      <img src="img/phplogo.jpg" alt="a logo that is being used by PHP.">
+      <img src="img/rubylogo.jpg" alt="a logo that is being used by Ruby.">
+      <h2>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</h2>
       <br><br>
       <form class="quiz" action="index.html" method="post">
-        <h4>Do you like designs?</h4>
-
+        <h4>Do you like looking at displays when in stores?</h4><br><br>
         <select id="question1">
           <option name="Java" value="1"> Sorta</option>
           <option name="Ruby" value="2">Yes!</option>
@@ -88,6 +90,7 @@
         <br><br>
         <button type="submit">Submit</button>
         <br><br>
+        <img src="img/programmerstereotype01.jpg" alt="Funny views on different programmers.">
       </form>
     </div>
   </body>
