--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <title>
     w2friday</title>
   </head>
-  <body>
+  <body background="img/background1.jpg" alt "An image of a computer terminal.">
     <div class="container">
+      <br><br>
       <h1>Know Which Track You Should be On</h1><br><br>
       <p>This is a quiz to help you realize which path of programming you should consider. There are several different kinds of languages in programming, and some of those languages branch out to different other languages as well. All these information can bog us down and even put us in a undecisive trance that we end up not doing anything at all. I know, I've been there. Here, I've narrowed it down to 3 choices. Ruby, Java and PHP.</p>
       <img src="img/javalogo.png" alt="a logo that is being used by Java">
       <img src="img/phplogo.jpg" alt="a logo that is being used by PHP.">
       <img src="img/rubylogo.jpg" alt="a logo that is being used by Ruby.">
+      <br><br>
       <h2>Use this as a tool to learn which direction or "track" you should follow to achieve your goal.</h2>
       <br><br>
       <form class="quiz" action="index.html" method="post">
-        <h4>Do you like looking at displays when in stores?</h4><br><br>
+        <h4>Do you like looking at displays when in stores?</h4>
         <select id="question1">
           <option name="Java" value="1"> Sorta</option>
           <option name="Ruby" value="2">Yes!</option>
@@ -85,12 +87,11 @@
         <select id="question10">
           <option name="Java" value="1">My favorite, French Dip Sandwich!</option>
           <option name="Ruby" value="2">I'll take sparkling water with my sushi, please.</option>
-          <option name="PHP" value="3">I'll just take the usual, the knuckle sandwich.</option>
+          <option name="PHP" value="3">I'll just take my usual knuckle sandwich.</option>
         </select>
         <br><br>
         <button type="submit">Submit</button>
         <br><br>
-        <img src="img/programmerstereotype01.jpg" alt="Funny views on different programmers.">
       </form>
     </div>
   </body>
