Changed the weight of the font, hid the options with a blank selection option, add value 0 to that option in scripts.js, and add an alert to user not to leave a question un-answered.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <form class="quiz" action="index.html" method="post">
         <h4>Do you like looking at displays when in stores?</h4>
         <select id="question1">
+          <option name="" value="0"></option>
           <option name="Java" value="1"> Sorta</option>
           <option name="Ruby" value="2">Yes!</option>
           <option name="PHP" value="3">No</option>
@@ -29,6 +30,7 @@
         <br><br>
         <h4>Do you enjoy making sense of things?</h4>
         <select id="question2">
+              <option name="" value="0"></option>
           <option name="Java" value="1"> Yes!</option>
           <option name="Ruby" value="2"> Sometimes</option>
           <option name="PHP" value="3"> Kill me now</option>
@@ -36,6 +38,7 @@
         <br><br>
         <h4>Do you enjoy interacting with other people?</h4>
         <select id="question3">
+          <option name="" value="0"></option>
           <option name="Java" value="1">On the Weekend</option>
           <option name="Ruby" value="2">Of course!</option>
           <option name="PHP" value="3">Try to get me too. I dare you.</option>
@@ -43,6 +46,7 @@
         <br><br>
         <h4>Do you like working alone?</h4>
         <select id="question4">
+          <option name="" value="0"></option>
           <option name="Java" value="1">Sometimes</option>
           <option name="Ruby" value="2">Yes</option>
           <option name="PHP" value="3">I hate everyone</option>
@@ -50,6 +54,7 @@
         <br><br>
         <h4>Is aesthetic important to you?</h4>
         <select id="question5">
+          <option name="" value="0"></option>
           <option name="Java" value="1">If i get paid</option>
           <option name="Ruby" value="2">A E S T H E T I C C C </option>
           <option name="PHP" value="3">I am the hacker 4chan</option>
@@ -57,6 +62,7 @@
         <br><br>
         <h4>What kind of dessert do you like?</h4>
         <select id="question6">
+          <option name="" value="0"></option>
           <option name="Java" value="1">Ice Cream Cake!</option>
           <option name="Ruby" value="2">Creme Brulee.</option>
           <option name="PHP" value="3">More broccoli, please.</option>
@@ -64,6 +70,7 @@
         <br><br>
         <h4>What kind of movies do you like?</h4>
         <select id="question7">
+          <option name="" value="0"></option>
           <option name="Java" value="1">Comedy</option>
           <option name="Ruby" value="2">Action</option>
           <option name="PHP" value="3">Horror, because screaming like a child in public feels great!</option>
@@ -71,6 +78,7 @@
         <br><br>
         <h4>What video games do you like?</h4>
         <select id="question8">
+          <option name="" value="0"></option>
           <option name="Java" value="1">AnimalCrossing</option>
           <option name="Ruby" value="2">Sims4</option>
           <option name="PHP" value="3">Dark Souls MOFO!!!</option>
@@ -78,6 +86,7 @@
         <br><br>
         <h4>Where is your Travel Destination?</h4>
         <select id="question9">
+          <option name="" value="0"></option>
           <option name="Java" value="1">All of Europe!</option>
           <option name="Ruby" value="2">Most of Asia!</option>
           <option name="PHP" value="3">North Korea.</option>
@@ -85,6 +94,7 @@
         <br><br>
         <h4>What's for lunch?</h4>
         <select id="question10">
+          <option name="" value="0"></option>
           <option name="Java" value="1">My favorite, French Dip Sandwich!</option>
           <option name="Ruby" value="2">I'll take sparkling water with my sushi, please.</option>
           <option name="PHP" value="3">I'll just take my usual knuckle sandwich.</option>
