--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>
     w2friday</title>
   </head>
-  <body background="img/background1.jpg" alt "An image of a computer terminal.">
+  <!-- <body background="img/background1.jpg" alt "An image of a computer terminal."> -->
+  <body>
     <div class="container">
       <br><br>
       <h1>Know Which Track You Should be On</h1><br><br>
@@ -103,6 +104,9 @@
         <button type="submit">Submit</button>
         <br><br>
       </form>
+      <div id="output" class="p-5">
+
+      </div>
     </div>
   </body>
   </html>
