Added the missing jQuery codes, and uppdated the README.md file.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     w2friday</title>
   </head>
   <!-- <body background="img/background1.jpg" alt "An image of a computer terminal."> -->
-  <body>
+  <body background="img/background1.jpg">
     <div class="container">
       <br><br>
       <h1>Know Which Track You Should be On</h1><br><br>
@@ -42,7 +42,7 @@
           <option name="" value="0"></option>
           <option name="Java" value="1">On the Weekend</option>
           <option name="Ruby" value="2">Of course!</option>
-          <option name="PHP" value="3">Try to get me too. I dare you.</option>
+          <option name="PHP" value="3">Try to get me to, I dare you.</option>
         </select>
         <br><br>
         <h4>Do you like working alone?</h4>
@@ -104,7 +104,7 @@
         <button type="submit">Submit</button>
         <br><br>
       </form>
-      <div id="output" class="p-5">
+      <div id="output" class="h1">
 
       </div>
     </div>
